# napari-imsmicrolink

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md  config.yml
docs/: conf.py  index.rst  installation.rst
docs/modules/: image_transform.rst
napari_imsmicrolink/: __init__.py  _dock_widget.py
napari_imsmicrolink/_tests/: _test_imsmicrolink.py  test_dock_widget.py  test_imsmicrolink.py
napari_imsmicrolink/_tests/data_tests/: test_image_transform.py  test_ims_pixel_map.py  test_microscopy_writer.py
napari_imsmicrolink/_tests/data_tests/_test_data/: peaks.sqlite
napari_imsmicrolink/data/: __init__.py  czi_reader.py  image_transform.py  ims_pixel_map.py  microscopy_reader.py  microscopy_writer.py  tifffile_reader.py
napari_imsmicrolink/qwidgets/: __init__.py  data_ctl_group.py  ims_ctl_group.py  save_ctl_group.py  save_dialog.py  tform_ctl_group.py
napari_imsmicrolink/qwidgets/subwidgets/: add_micro_info.py  control_ims_info.py  control_rotation.py  control_save.py  control_transform.py  ims_add_info.py
napari_imsmicrolink/utils/: color.py  czi.py  file.py  image.py  ome.py  points.py
src/napari_imsmicrolink/: _dock_widget.py  napari.yaml
src/napari_imsmicrolink/_tests/data_tests/: test_ims_pixel_map.py  test_microscopy_writer.py
src/napari_imsmicrolink/_tests/data_tests/_test_data/: bruker_spotlist.txt  imzml_file.imzML
src/napari_imsmicrolink/data/: __init__.py  image_transform.py  microscopy_reader.py  microscopy_writer.py  tifffile_reader.py
src/napari_imsmicrolink/qwidgets/: __init__.py  data_ctl_group.py  ims_ctl_group.py  tform_ctl_group.py
src/napari_imsmicrolink/qwidgets/subwidgets/: add_micro_info.py  control_ims_info.py  ims_add_info.py
src/napari_imsmicrolink/utils/: color.py  coords.py  czi.py  image.py  ims_coords.py  tifffile_meta.py
