[metadata]
name = napari-imsmicrolink
version = 0.1.5.1
author = Nathan Heath Patterson
author_email = heath.patterson@vanderbilt.edu
license = MIT
url = https://github.com/nhpatterson/napari-imsmicrolink
description = Plugin to perform IMS to microscopy registration using laser ablation marks.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License
project_urls = 
	Bug Tracker = https://github.com/nhpatterson/napari-imsmicrolink/issues
	Documentation = https://github.com/nhpatterson/napari-imsmicrolink#README.md
	Source Code = https://github.com/nhpatterson/napari-imsmicrolink
	User Support = https://github.com/nhpatterson/napari-imsmicrolink/issues

[options]
packages = find:
python_requires = >=3.7
# add your package requirements here
install_requires = 
	numpy
	tifffile
	dask
	zarr==2.10.3
	qtpy
	aicsimageio[bioformats]
	bioformats_jar
	SimpleITK
	pandas
	h5py
	opencv-python
	czifile
	imagecodecs

[options.entry_points]
napari.manifest = 
	napari-imsmicrolink = napari_imsmicrolink:napari.yaml

[options.package_data]
napari_imsmicrolink = napari.yaml

